--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.todolist">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <application
         android:allowBackup="true"
@@ -11,14 +10,48 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.TodoList"
+        android:theme="@style/Theme.MATE"
         tools:targetApi="31">
         <activity
-            android:name=".DatePickerToDo"
-            android:exported="false" />
+            android:name=".DatePick_Spinner_Before_Time"
+            android:theme="@style/Theme.MyDialog"
+            android:exported="true">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
         <activity
-            android:name=".AddActivity"
-            android:exported="false" />
+            android:name=".TimePick_Spinner"
+            android:exported="true"
+            android:theme="@style/Theme.MyDialog">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".DatePick_Spinner"
+            android:exported="true"
+            android:theme="@style/Theme.MyDialog">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".Popup_Todo_Update"
+            android:exported="true"
+            android:theme="@style/Theme.MyDialog">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".Popup_Todo_Add"
+            android:exported="true"
+            android:theme="@style/Theme.MyDialog">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -27,6 +60,10 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
         </activity>
     </application>
 
